# RHIPE

./: .gitignore  CMakeLists.txt  README  README.org  rexp.proto
c/: engine.cc  io.cc  misc.cc  org_godhuli_rhipe_bridge_REngineCore.h
doc/_build/latex/: RHIPE.tex
ec2-installation/: index.html  index.org
java/: pom.xml
java/src/main/java/org/godhuli/rhipe/bridge/: REngineCore.java
java/src/main/java/org/godhuli/rhipe/io/: NIOWriter.java  REXPHelper.java  RHBytesWritable.java
java/src/main/java/org/godhuli/rhipe/misc/: Utility.java
org/godhuli/rhipe/io/: REXPProtos.java
src/: CMakeLists.txt  Rincludes.h  engine.cc  global.h  io.cc  misc.cc  misc.h  org_godhuli_rhipe_bridge_REngineCore.h
standalone_examples/unit_test/bquote_make_words_out/: part-m-00000  part-m-00001
standalone_examples/unit_test/export_rdata_sim_data/: .part-r-00000.crc  part-r-00000
test-jni/R/: configure
